[gd_scene load_steps=12 format=3 uid="uid://d2gfhlsojwpgw"]

[ext_resource type="Texture2D" uid="uid://d1p8oe23i3ffp" path="res://assets/buttons/uiedit.png" id="1_47hxd"]
[ext_resource type="Script" path="res://scripts/server_display.gd" id="2_gdsdh"]
[ext_resource type="Texture2D" uid="uid://dhwxbxv7mla3p" path="res://assets/buttons/uibutton.png" id="2_r15ng"]

[sub_resource type="SystemFont" id="SystemFont_a5grr"]
font_names = PackedStringArray("Cooper")
subpixel_positioning = 0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1n6yb"]
texture = ExtResource("1_47hxd")
texture_margin_left = 25.0
texture_margin_top = 25.0
texture_margin_right = 25.0
texture_margin_bottom = 25.0
modulate_color = Color(0.360784, 1, 1, 1)

[sub_resource type="Theme" id="Theme_bse12"]
Label/colors/font_color = Color(0, 0.513147, 0.513147, 1)
Label/constants/outline_size = 30
Label/font_sizes/font_size = 45
Label/fonts/font = SubResource("SystemFont_a5grr")
Label/styles/normal = SubResource("StyleBoxTexture_1n6yb")

[sub_resource type="SystemFont" id="SystemFont_ok3en"]
font_names = PackedStringArray("Cooper")
subpixel_positioning = 0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ifyyn"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_tsfx3"]
texture = ExtResource("2_r15ng")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1vac5"]
texture = ExtResource("2_r15ng")

[sub_resource type="Theme" id="Theme_7hjxy"]
Button/colors/font_color = Color(0.284398, 0.000272228, 0.877517, 1)
Button/constants/outline_size = 30
Button/font_sizes/font_size = 50
Button/fonts/font = SubResource("SystemFont_ok3en")
Button/styles/focus = SubResource("StyleBoxEmpty_ifyyn")
Button/styles/hover = SubResource("StyleBoxTexture_tsfx3")
Button/styles/normal = SubResource("StyleBoxTexture_1vac5")
Button/styles/pressed = SubResource("StyleBoxTexture_1vac5")

[node name="server_display" type="Label" groups=["server_display"]]
custom_minimum_size = Vector2(1215, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -640.0
offset_top = -400.0
offset_right = 576.0
offset_bottom = -292.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 0
theme = SubResource("Theme_bse12")
theme_override_font_sizes/font_size = 50
text = "N/A"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true
text_overrun_behavior = 3
script = ExtResource("2_gdsdh")

[node name="Join" type="Button" parent="."]
custom_minimum_size = Vector2(150, 0)
layout_mode = 0
offset_left = 1064.0
offset_top = 4.0
offset_right = 1214.0
offset_bottom = 116.0
size_flags_horizontal = 3
theme = SubResource("Theme_7hjxy")
text = "Join"

[connection signal="focus_entered" from="Join" to="." method="_on_focus_entered"]
[connection signal="mouse_entered" from="Join" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="Join" to="." method="_on_join_pressed"]
